# vllm

benchmarks/: auto_benchmark.sh  auto_benchmark_qps.sh  backend_request_func.py  benchmark_serving.py
benchmarks/tools/: parse_benchmark.py
vllm/distributed/kv_transfer/kv_connector/: factory.py
vllm/distributed/kv_transfer/kv_connector/v1/p2p/: p2p_nccl_connector.py  p2p_nccl_engine.py  p2p_rdma_connector.py  p2p_rdma_engine.py  utils.py
vllm/lora/new/: test.py
vllm/lora/new/ops/: sgmv_expand_slice.py
vllm/v1/worker/: gpu_model_runner.py
vllm_cpp/: CMakeLists.txt  README.md
vllm_cpp/examples/: CMakeLists.txt  basic_inference.cpp  mimo_v2_flash_example.cpp  qwen2_example.cpp
vllm_cpp/include/vllm/: common.h  vllm.h
vllm_cpp/include/vllm/core/: config.h  kv_cache.h  tensor.h
vllm_cpp/include/vllm/engine/: engine.h  request.h  scheduler.h
vllm_cpp/include/vllm/model_executor/layers/: activation.h  attention.h  layernorm.h  linear.h  mlp.h  rotary_embedding.h
vllm_cpp/include/vllm/model_executor/models/: mimo_v2_flash.h  qwen2.h
vllm_cpp/include/vllm/server/: api_server.h  openai_types.h
vllm_cpp/src/core/: config.cpp
vllm_cpp/src/kernels/activation/: activation_kernels.cu
vllm_cpp/src/kernels/attention/: rotary_embedding_kernels.cu
vllm_cpp/src/kernels/cache/: cache_kernels.cu
vllm_cpp/src/kernels/layernorm/: layernorm_kernels.cu
vllm_cpp/src/model_executor/: model_loader.cpp
vllm_cpp/src/server/: main.cpp
vllm_cpp/src/utils/: logging.cpp
vllm_cpp/tests/: CMakeLists.txt  test_layers_simple.cpp  test_models_simple.cpp
